Fixed the alignment problem

--- a/apps/to-do-list/CSS/to-do-list.css
+++ b/apps/to-do-list/CSS/to-do-list.css
@@ -129,12 +129,11 @@ ul {
 }
 
 .task-item {
-    margin-top: 15px;
+    margin-top: 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     border-bottom: 1px solid var(--secondary-grey);
-    text-align: center;
 }
 
 button {
